--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>New Maximum Potency Formula - Lymphatic Drainage Capsules by
             Sculptique</title>
-<link rel="icon" type="image/png" href="//trysculptique.com/cdn/shop/files/fav.png?crop=center&amp;height=32&amp;v=1747491248&amp;width=32">
+        <link rel="icon" type="image/png"
+            href="//trysculptique.com/cdn/shop/files/fav.png?crop=center&amp;height=32&amp;v=1747491248&amp;width=32">
 
         <link rel="stylesheet" href="./css/variables.css">
         <link rel="stylesheet" href="./css/reset.css">
@@ -1932,7 +1933,7 @@
                     </div>
                 </div>
 
-                <div class="product_judge-outer">
+                <div class="product_judge-outer product-re">
 
                     <div class="content-page">
 
