--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@
                     </div>
                 </div>
 
-                <div class="product-judge_outer pli-gip">
+                <div class="pli-gip">
 
                     <div class="content-page">
 
